tests/fixtures/invalid/divmod_int_set.py
# Cannot call divmod() with Int, Set[int]
x = divmod(1, {1, 2, 3})
